--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: incredible_tts_example
-description: Demonstrates how to use the incredible_tts plugin.
+name: tflite_tts_example
+description: Demonstrates how to use the tflite_tts plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -13,16 +13,8 @@ dependencies:
     sdk: flutter
   tflite: ^1.1.1
 
-  incredible_tts:
-    # When depending on this package from a real application you should use:
-    #   incredible_tts: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
+  tflite_tts:
     path: ../
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
@@ -43,9 +35,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # assets:
   assets:
-    - packages/incredible_tts/assets/mb_melgan.tflite
-    - packages/incredible_tts/assets/fastspeech2_quan.tflite
-    - packages/incredible_tts/assets/baker_mapper.json
+    - assets/mb_melgan.tflite
+    - assets/fastspeech2_quan.tflite
+    - assets/baker_mapper.json
                                      
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
