--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: incredible_tts
+name: tflite_tts
 description: A new flutter plugin project.
 version: 0.0.1
 author:
@@ -18,6 +18,10 @@ dependencies:
   audioplayers:
     path: ../audioplayers/audioplayers
   tuple: ^1.0.3
+  flutter_mmap_stream:
+    #git:
+    #  url: git@github.com:nmfisher/flutter_mmap_stream.git
+    path: ../flutter_mmap_stream
 
 dev_dependencies:
   flutter_test:
@@ -35,16 +39,16 @@ flutter:
   plugin:
     platforms:
       ios:
-        pluginClass: IncredibleTtsPlugin
+        pluginClass: TfliteTtsPlugin
       android:
-        pluginClass: IncredibleTtsPlugin
-        package: com.example.incredible_tts
+        pluginClass: TfliteTtsPlugin
+        package: com.avinium.tflite_tts
 
   # To add assets to your plugin package, add an assets section, like this:
-  assets:
-    - lib/assets/fastspeech2_quan.tflite
-    - lib/assets/mb_melgan.tflite
-    - lib/assets/baker_mapper.json
+  # assets:
+    #- lib/assets/fastspeech2_quan.tflite
+    #- lib/assets/mb_melgan.tflite
+    #- lib/assets/baker_mapper.json
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
