--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   audioplayers:
   tflite_tts:
     path: ../
+  flutter_tflite:
+    path: ../../flutter_tflite
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
