--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tflite_tts
-description: A new flutter plugin project.
+description: A Flutter plugin for text-to-speech from a TFLite model.
 version: 0.0.1
 author:
 homepage:
