--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.avinium.tflite_tts">
+  package="com.avinium.flutter_tflite_tts_plugin">
 </manifest>
