--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: tflite_tts_example
-description: Demonstrates how to use the tflite_tts plugin.
+name: flutter_tflite_tts_plugin_example
+description: Demonstrates how to use the flutter_tflite_tts_plugin plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   audioplayers:
-  tflite_tts:
+  flutter_tflite_tts_plugin:
     path: ../
   flutter_tflite:
     path: ../../flutter_tflite
